added endpoints, extended others, and added security